fix-bug: add vertical-align style for list-item to prevent from lists' bouncing when users drag lists

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -197,6 +197,7 @@ html,body {
 }
 
 #board-content {
+  box-sizing: border-box;
   width: 100%;
   height: calc(100% - 40px);
   overflow-x: auto;
@@ -216,7 +217,7 @@ html,body {
   width: 300px;
   height: 100%;
   display:inline-block;
-  margin-right: 20px;
+  margin-right: 10px;
   background-color: rgba(255, 228, 90, 0.8);
 }
 
@@ -224,7 +225,9 @@ html,body {
   width: 300px;
   height: 100%;
   display:inline-block;
-  margin-right: 20px;
+  /* this setting is very important. Without it, lists will bounce when dragging lists. */
+  vertical-align: top;
+  margin-right: 10px;
   background-color: rgba(227, 227, 227, 0.8);
 }
 
